tests/ui/parser/issues/issue-46186.rs
// run-crablangfix

pub struct Struct {
    pub a: usize,
};
//~^ ERROR expected item, found `;`

fn main() {}
